fix omnisearch on small screens

--- a/src/app/shared/omnisearch/omnisearch.component.scss
+++ b/src/app/shared/omnisearch/omnisearch.component.scss
@@ -72,7 +72,11 @@ input {
   box-shadow: 2px 2px 50px 0px rgba(#000, 0.3);
 
   min-width: 250px;
+  @include media-breakpoint-down(xs) {
+    width: 95vw;
+  }
   .matches {
+    min-height: 14em;
     @include media-breakpoint-down(sm) {
       padding-bottom: 1em;
     }
